- fix handling of quoted slash alone.
- fix parse confusion between attribute and attribute value.
- fix version passed to get_supported_ver_and_cost.
- mark map instances stale so they aren't "cleaned" during updates.
- fix large file compile time option.
- don't fail on empty master map.
- add support for the "%" hack for case insensitive attribute schemas.

18/06/2007 autofs-5.0.2
-----------------------
- fix return check for getpwuid_r and getgrgid_r.
- give up trying to update exports list while host is mounted.
- fix to "@network" matching.
- check for fstab update and retry if not updated.
- change file map lexer to allow white-space only blank lines.
- remove macro substitution in automount.8 man page (Guillaume Rousse).
- correct hesiod library check in configure (Guillaume Rousse).
- drop "DEFAULT_" prefix from configuration names (Guillaume Rousse).
- remove redundant ident macros.
- various configure cleanups (Richard Daniel).
- various code cleanups (Richard Daniel).
- fixed numeric export match.
- add option to select replicated server at random (instead of response time).
- fix incorrect cast in directory cleanup routines.
- fix directory creation for browse mounts.
- fix wildcard map handling and improve nsswitch source map re-reading.
- fix "null" domain netgroup match for "-hosts" map.
- update kernel patches.
- add configuration variable to control appending of global options.
- add command option to set a global mount options string.
- add check for labeled local filesystems (Matthias Koenig).
- disable exports check for "-hosts" map.
- fix memory allocation problem with global options patch.
- fix master map lexer to admit "." in macro values (Mike Matera).
- make ldap attribute match case insensitive.
- add missed man page update for APPEND_OPTIONS config option.
- add ldaps protocol support.
  - note: it's no longer possible to multiple hosts in an ldap map spec.
  - note: if this is needed use only the map name and configure the URI